# XboxAudio2

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
.github/workflows/: main.yml
include/: avcodec_raii.h  xma2defs.h
lib/: CMakeLists.txt  kernelx.def
source/: ordinal_thunk.asm  xaudio2.cpp  xaudio2_impl.h  xma_voice.cpp  xma_voice.h
